# sudoku_solver

./: Cargo.toml  README.md
src/: bench.rs  bitset.rs  combination.rs  consts.rs  main.rs  sudoku.rs  tests.rs  unroll.rs  utils.rs
test/: boards-evil.json  gen.py  puzzles-combined.json  puzzles-combined.txt  puzzles-easy.json  puzzles-evil.json  puzzles-expert.json  puzzles-hard.json  puzzles-medium.json
test/boards/easy/: board-1.txt  board-10.txt  board-11.txt  board-14.txt  board-16.txt  board-17.txt  board-18.txt  board-19.txt  board-22.txt  board-23.txt  board-24.txt  board-31.txt  board-32.txt  board-33.txt  board-34.txt  board-36.txt  board-37.txt  board-39.txt  board-4.txt  board-43.txt  board-44.txt  board-46.txt  board-47.txt  board-48.txt  board-49.txt  board-50.txt  board-53.txt  board-54.txt  board-56.txt  board-57.txt  board-58.txt  board-59.txt  board-6.txt  board-61.txt  board-63.txt  board-64.txt  board-65.txt  board-68.txt  board-73.txt  board-74.txt  (+12 more)
test/boards/evil/: board-10.txt  board-11.txt  board-12.txt  board-15.txt  board-16.txt  board-22.txt  board-24.txt  board-25.txt  board-3.txt  board-32.txt  board-34.txt  board-38.txt  board-4.txt  board-41.txt  board-50.txt  board-52.txt  board-60.txt  board-63.txt  board-64.txt  board-65.txt  board-68.txt  board-7.txt  board-71.txt  board-72.txt  board-74.txt  board-76.txt  board-8.txt  board-80.txt  board-81.txt  board-83.txt  board-85.txt  board-89.txt  board-91.txt  board-92.txt  board-94.txt  board-95.txt  board-98.txt  board-99.txt
test/boards/expert/: board-1.txt  board-17.txt  board-18.txt  (+52 more)
(+338 files in other folders)
