[package]
name = "sudoku_solver"
version = "0.3.0"
edition = "2021"

[dependencies]
hashbrown = "0.14.3"
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[profile.release]
lto = true
codegen-units = 1

[lints.clippy]
pedantic = "warn"
nursery = "warn"
all = "warn"
