[package]
name = "sudoku_solver"
version = "0.4.1"
edition = "2021"

[dependencies]
crunchy = "0.2.2"
itertools = "0.12.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[lints.clippy]
pedantic = "warn"
nursery = "warn"
all = "warn"
cast_possible_truncation = "allow"
